@@ -1,4 +1,7 @@
 /* default skin for thickbox interface */
+a img {
+    border: 1px solid #525252;
+}
 #tb-dim {
     background: #000;
     opacity: .6;
@@ -16,4 +19,10 @@
 #tb-modal.confirm h2 {
     margin: 0 0 .5em;
     font-size: 12px;
+}
+
+/* TODO */
+#tb-modal * {
+    font: 12px/1.3 Helvetica, Arial, Geneva, "sans-serif";
+    margin: 0;
 }
